tests/soundness/token_shadowing_exploit.stderr
error[E0308]: mismatched types
  --> tests/soundness/token_shadowing_exploit.rs:18:1
   |
18 | #[arcane]
   | ^^^^^^^^^
   | |
   | expected `archmage::X64V3Token`, found `X64V3Token`
   | arguments to this function are incorrect
   |
   = note: `X64V3Token` and `archmage::X64V3Token` have similar names, but are actually distinct types
note: `X64V3Token` is defined in the current crate
  --> tests/soundness/token_shadowing_exploit.rs:16:1
   |
16 | struct X64V3Token;
   | ^^^^^^^^^^^^^^^^^
note: `archmage::X64V3Token` is defined in crate `archmage`
  --> src/tokens/generated/x86.rs
   |
   | pub struct X64V3Token {
   | ^^^^^^^^^^^^^^^^^^^^^
note: function defined here
  --> tests/soundness/token_shadowing_exploit.rs:18:1
   |
18 | #[arcane]
   | ^^^^^^^^^
   = note: this error originates in the attribute macro `arcane` (in Nightly builds, run with -Z macro-backtrace for more info)
